final commit on 07102025

--- a/playground-server/testing.html
+++ b/playground-server/testing.html
@@ -89,6 +89,10 @@
             <span class="label">Source Repository:</span>
             <span><a href="https://github.com/sureshwizard/featurefence.git" target="_blank" rel="noopener">https://github.com/sureshwizard/featurefence.git</a></span>
           </div>
+          <div class="row">
+            <span class="label">Github help-Website</span>
+            <span><a href="https://sureshwizard.github.io/featurefence" target="_blank" rel="noopener">https://sureshwizard.github.io/featurefence</a></span>
+          </div>
           <div class="muted" style="margin-top:6px">(Optional) Include your public repo for reviewers.</div>
         </div>
       </div>
